Implement discogs client, fetch inventory